codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9                │
│ Run pnpm add -g @openai/codex to update.           │
│                                                    │
│ See full release notes:                            │
│ https://github.com/sednalabs/codex/releases/latest │
╰────────────────────────────────────────────────────╯
