codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9                                                                        │
│ Run bash -c 'curl -fsSL                                                                                    │
│ https://raw.githubusercontent.com/sednalabs/codex/main/scripts/install_sedna_release_asset |               │
│ CODEX_NON_INTERACTIVE=1 bash -s -- --repository sednalabs/codex --release-tag latest --require-newer-than  │
│ 0.0.0' to update.                                                                                          │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/sednalabs/codex/releases/latest                                                         │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
